[gd_scene load_steps=2 format=3 uid="uid://bqxm8y7kcwxf1"]

[ext_resource type="Script" path="res://addons/godot_lottie/ui/lottie_dock.gd" id="1"]

[node name="LottieDock" type="VBoxContainer"]
offset_right = 300.0
offset_bottom = 600.0
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Lottie Animation"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="AnimationInfo" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FileLabel" type="Label" parent="AnimationInfo"]
layout_mode = 2
text = "File: None"

[node name="DurationLabel" type="Label" parent="AnimationInfo"]
layout_mode = 2
text = "Duration: 0.0s"

[node name="FramesLabel" type="Label" parent="AnimationInfo"]
layout_mode = 2
text = "Frames: 0"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlaybackButtons" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Controls/PlaybackButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="PauseButton" type="Button" parent="Controls/PlaybackButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause"

[node name="StopButton" type="Button" parent="Controls/PlaybackButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="Timeline" type="VBoxContainer" parent="Controls"]
layout_mode = 2

[node name="FrameLabel" type="Label" parent="Controls/Timeline"]
layout_mode = 2
text = "Frame: 0 / 0"

[node name="FrameSlider" type="HSlider" parent="Controls/Timeline"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0

[node name="SpeedControl" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="Controls/SpeedControl"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSlider" type="HSlider" parent="Controls/SpeedControl"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="SpeedValue" type="Label" parent="Controls/SpeedControl"]
layout_mode = 2
text = "1.0x"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="StateMachine" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StateMachineLabel" type="Label" parent="StateMachine"]
layout_mode = 2
text = "State Machine"

[node name="CurrentState" type="Label" parent="StateMachine"]
layout_mode = 2
text = "Current: None"

[node name="StatesList" type="ItemList" parent="StateMachine"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="StateButtons" type="HBoxContainer" parent="StateMachine"]
layout_mode = 2

[node name="AddStateButton" type="Button" parent="StateMachine/StateButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add State"

[node name="RemoveStateButton" type="Button" parent="StateMachine/StateButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="Parameters" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ParametersLabel" type="Label" parent="Parameters"]
layout_mode = 2
text = "Parameters"

[node name="ParametersList" type="ItemList" parent="Parameters"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ParameterButtons" type="HBoxContainer" parent="Parameters"]
layout_mode = 2

[node name="AddParamButton" type="Button" parent="Parameters/ParameterButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Param"

[node name="RemoveParamButton" type="Button" parent="Parameters/ParameterButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"
